add rating and cost
