# app/backend/src/Entity/Book.php
@@ -2,6 +2,7 @@
 
 namespace App\Entity;
 
+use App\Enum\AgeRating;
 use App\Repository\BookRepository;
 use Doctrine\ORM\Mapping as ORM;
 
@@ -20,10 +21,23 @@ class Book
     #[ORM\JoinColumn(nullable: false)]
     private Genre $genre;
 
-    public function __construct(string $name, Genre $genre)
+    #[ORM\Column]
+    private float $cost;
+
+    #[ORM\Column(enumType: AgeRating::class)]
+    private AgeRating $ageRating;
+
+    public function __construct(
+        string $name,
+        float $cost,
+        Genre $genre,
+        AgeRating $ageRating
+    )
     {
         $this->name = $name;
         $this->genre = $genre;
+        $this->cost = $cost;
+        $this->ageRating = $ageRating;
     }
 
     public function getId(): ?int
@@ -39,5 +53,15 @@ class Book
     public function getGenre(): ?Genre
     {
         return $this->genre;
+    }
+
+    public function getCost(): ?float
+    {
+        return $this->cost;
+    }
+
+    public function getAgeRating(): AgeRating
+    {
+        return $this->ageRating;
     }
 }
